feat: pushing to test css quiz for mobile

--- a/quiz.html
+++ b/quiz.html
@@ -1,1 +1,46 @@
 <!-- This is the quiz html file, file will decide the school for the user and will link the non completed profile to completed profile (quiz completion) -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ICT OpenHouse</title>
+    <link rel="stylesheet" href="css/quiz-style.css">
+</head>
+<body>
+    <main class="cards">
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <h2>01</h2>
+                    <h3>Card One</h3>
+                    <p>Details here - Data data</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>Card Two</h3>
+                    <p>Details here - Data data</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <h2>03</h2>
+                    <h3>Card Three</h3>
+                    <p>Details here - Data data</p>
+                </div>
+            </div>
+        </div>
+    </main> 
+
+</body>
+</html>
