feat: Enlarge of Cards on Click feature works

--- a/quiz.html
+++ b/quiz.html
@@ -8,15 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICT OpenHouse</title>
     <link rel="stylesheet" href="css/quiz-style.css">
+
 </head>
 <body>
+    <div id="background"></div>
+    <div id="questions" class="question">Question Here</div>
     <main class="cards">
         <div class="container">
             <div class="card">
-                <div class="content">
+                <div class="content"> <!-- add identifying tag here-->
                     <h2>01</h2>
-                    <h3>Card One</h3>
-                    <p>Details here - Data data</p>
+                    <h3>Working with like-minded individuals through trials and tribulations</h3>
                 </div>
             </div>
         </div>
@@ -25,22 +27,16 @@
             <div class="card">
                 <div class="content">
                     <h2>02</h2>
-                    <h3>Card Two</h3>
-                    <p>Details here - Data data</p>
+                    <h3>Having things come out as intended</h3>
                 </div>
             </div>
         </div>
 
-        <div class="container">
-            <div class="card">
-                <div class="content">
-                    <h2>03</h2>
-                    <h3>Card Three</h3>
-                    <p>Details here - Data data</p>
-                </div>
-            </div>
-        </div>
-    </main> 
 
+    </main>
 </body>
+
+<script type="text/javascript" src="script/jquery-3.6.0.slim.min.js"></script>
+<Script type="text/javascript" src="script/quiz-script.js"></script>
+
 </html>
