feat!: progress update: quiz, login, main prof, course all linked. map deactivated

--- a/gacha.html
+++ b/gacha.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="gacha.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <link rel="stylesheet" href="/css/gacha.css">
     
         <title>Lucky draw</title>
     </head>
@@ -23,6 +23,6 @@
         <div class="eight">8</div>
     </div>
     <!--Javascript for spinning wheel-->
-    <script src="gacha.js "></script>
+    <script src="/script/gacha.js "></script>
     </body>
     </html>
