--- a/quiz.html
+++ b/quiz.html
@@ -48,9 +48,19 @@
 
     <button class="submit forward">Choose</button>
 
+    <section class="lottie">
+        <div class="loadAnims">
+            <lottie-player class="" src="https://assets2.lottiefiles.com/packages/lf20_qiuhvo9f.json"  background="transparent"  speed="0.7"  style="width: 60vh; height: 60vh;"  loop autoplay></lottie-player>    <!--margin-left: 34.5vw; margin-top: 20vh;--> 
+        </div>
+    </section>
+
 </body>
 
-<script type="text/javascript" src="script/jquery-3.6.0.slim.min.js"></script>
+<!-- Script JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+
 <script type="text/javascript" src="script/quiz-script.js"></script>
+
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </html>
