--- a/profile_completed.html
+++ b/profile_completed.html
@@ -74,9 +74,9 @@
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         
         <!--Script for Particle JS-->
-        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
         <!-- stats.js lib --> 
-        <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+        <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
         <script src="./script/particles-three.js"></script>
         
         <!--Script for Icon-->
