feat: navigation adjusted, no longer shows current page, except home on nav; hid lottie on quiz

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="./profile_completed.html">Home</a></li>
                 <li><a href="./course_selection.html">Courses</a></li>
-                <li><a>About</a></li>
-                <li><a href="#">Event</a></li>
+                <!-- <li><a>About</a></li> -->
+                <!-- <li><a href="#">Event</a></li> -->
             </ul>
         </nav>
     
