--- a/course_selection.html
+++ b/course_selection.html
@@ -21,9 +21,9 @@
       </label>
       <ul>
           <li><a href="./profile_completed.html">Home</a></li>
-          <li><a>Courses</a></li>
+          <!-- <li><a>Courses</a></li> -->
           <li><a href="./aboutus.html">About</a></li>
-          <li><a href="#">Event</a></li>
+          <!-- <li><a href="#">Event</a></li> -->
       </ul>
     </nav>
 
