--- a/profile_completed.html
+++ b/profile_completed.html
@@ -30,10 +30,10 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul>
-                <li><a class="courseSelected" href="#">Home</a></li>
+                <li><a class="courseSelected" href="./profile_completed.html">Home</a></li>
                 <li><a href="./course_selection.html">Courses</a></li>
                 <li><a href="./aboutus.html">About</a></li>
-                <li><a href="#">Event</a></li>
+                <!-- <li><a href="#">Event</a></li> -->
             </ul>
         </nav>
 
