--- a/quiz.html
+++ b/quiz.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>ICT OpenHouse</title>
-    <link rel="stylesheet" href="css/quiz-style.css">
+    <link rel="stylesheet" href="./css/quiz-style.css">
 
 </head>
 <body>
@@ -50,7 +50,7 @@
 
     <section class="lottie">
         <div class="loadAnims">
-            <lottie-player class="" src="https://assets2.lottiefiles.com/packages/lf20_qiuhvo9f.json"  background="transparent"  speed="0.7"  style="width: 60vh; height: 60vh;"  loop autoplay></lottie-player>    <!--margin-left: 34.5vw; margin-top: 20vh;--> 
+            <lottie-player class="" src="https://assets2.lottiefiles.com/packages/lf20_qiuhvo9f.json" background="transparent"  speed="0.7"  style="width: 60vh; height: 60vh;"  loop autoplay></lottie-player>    <!--margin-left: 34.5vw; margin-top: 20vh;--> 
         </div>
     </section>
 
@@ -59,7 +59,7 @@
 <!-- Script JQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
-<script type="text/javascript" src="script/quiz-script.js"></script>
+<script type="text/javascript" src="./script/quiz-script.js"></script>
 
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
