feat: updated readme most content; html with title

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/9c9ca1a085.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/aboutus.css">
+        <title>NP Open House - About Us</title>
     </head>
     <!--About us page-->
     <body>
