--- a/profile_completed.html
+++ b/profile_completed.html
@@ -20,7 +20,7 @@
         <!--Images-->
         
         <!--Website name-->
-        <title>NP Open House</title>
+        <title>NP Open House - Profile</title>
     </head>
     <body>
         <nav style="display: none;">
