--- a/course_selection.html
+++ b/course_selection.html
@@ -7,7 +7,7 @@
 
     <!--Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-    <title>NP Open House</title>
+    <title>NP Open House - Course Select</title>
   
     
 </head>
