--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>ICT OpenHouse</title>
+    <title>NP Open House - Quiz</title>
     <link rel="stylesheet" href="./css/quiz-style.css">
 
 </head>
